--- a/MvcWebMusica2/Views/VideoClips/Create.cshtml
+++ b/MvcWebMusica2/Views/VideoClips/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcWebMusica2.Models.VideoClips
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create de VideoClips";
 }
 
 <h1>Create</h1>
