--- a/MvcWebMusica2/Views/VideoClipsPlataformas/Edit.cshtml
+++ b/MvcWebMusica2/Views/VideoClipsPlataformas/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcWebMusica2.Models.VideoClipsPlataformas
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit de VideoClips/Plataformas";
 }
 
 <h1>Edit</h1>
