--- a/MvcWebMusica2/Views/VideoClips/Delete.cshtml
+++ b/MvcWebMusica2/Views/VideoClips/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcWebMusica2.Models.VideoClips
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete de VideoClips";
 }
 
 <h1>Delete</h1>
@@ -21,7 +21,7 @@
             @Html.DisplayNameFor(model => model.Canciones)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Canciones.Id)
+            @Html.DisplayFor(model => model.Canciones.Titulo)
         </dd>
     </dl>
     
