--- a/MvcWebMusica2/Views/VideoClipsPlataformas/Create.cshtml
+++ b/MvcWebMusica2/Views/VideoClipsPlataformas/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcWebMusica2.Models.VideoClipsPlataformas
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create de VideoClips/Plataformas";
 }
 
 <h1>Create</h1>
