--- a/MvcWebMusica2/Views/VideoClipsPlataformas/Details.cshtml
+++ b/MvcWebMusica2/Views/VideoClipsPlataformas/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MvcWebMusica2.Models.VideoClipsPlataformas
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Details de VideoClips/Plataformas";
 }
 
 <h1>Details</h1>
@@ -20,13 +20,13 @@
             @Html.DisplayNameFor(model => model.Plataformas)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Plataformas.Id)
+            @Html.DisplayFor(model => model.Plataformas.Nombre)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.VideoClips)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.VideoClips.Id)
+            @Html.DisplayFor(model => model.VideoClips.Canciones)
         </dd>
     </dl>
 </div>
