Cambiar titulo en Index.cshtml

--- a/MvcWebMusica2/Views/Representantes/Index.cshtml
+++ b/MvcWebMusica2/Views/Representantes/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index de Representantes";
 }
 
-<h1>Index</h1>
+<h1>Representantes</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
