--- a/MvcWebMusica2/Views/FuncionesArtistas/Index.cshtml
+++ b/MvcWebMusica2/Views/FuncionesArtistas/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index de Funciones/Artistas";
 }
 
-<h1>Index</h1>
+<h1>Funciones/Artistas</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
