--- a/MvcWebMusica2/Views/Plataformas/Index.cshtml
+++ b/MvcWebMusica2/Views/Plataformas/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index de Plataformas";
 }
 
-<h1>Index</h1>
+<h1>Plataformas</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
