--- a/MvcWebMusica2/Views/VideoClips/Index.cshtml
+++ b/MvcWebMusica2/Views/VideoClips/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index de VideoClips";
 }
 
-<h1>Index</h1>
+<h1>VideoClips</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
