--- a/MvcWebMusica2/Views/VideoClipsPlataformas/Index.cshtml
+++ b/MvcWebMusica2/Views/VideoClipsPlataformas/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index de VideoClips/Plataformas";
 }
 
-<h1>Index</h1>
+<h1>VideoClips/Plataformas</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
