--- a/MvcWebMusica2/Views/Shared/_Layout.cshtml
+++ b/MvcWebMusica2/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Web de música</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/MvcWebMusica2.styles.css" asp-append-version="true" />
 </head>
@@ -12,16 +13,13 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MvcWebMusica2</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MVC Web Musica</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Inicio</a>
-                        </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link text-dark dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Música
@@ -35,9 +33,6 @@
                                 <li><a class="nav-link text-dark" asp-area="" asp-controller="Canciones" asp-action="Index">Canciones</a></li>
                                 <li><a class="nav-link text-dark" asp-area="" asp-controller="Grupos" asp-action="Index">Grupos</a></li>
                                 <li><a class="nav-link text-dark" asp-area="" asp-controller="Albumes" asp-action="Index">Albumes</a></li>
-                                @*
-                                <li><hr class="dropdown-divider"></li>
-                                *@
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -56,7 +51,7 @@
                             <ul class="dropdown-menu">
                                 <li><a class="nav-link text-dark" asp-area="" asp-controller="VideoClips" asp-action="Index">VideoClips</a></li>
                                 <li><a class="nav-link text-dark" asp-area="" asp-controller="Plataformas" asp-action="Index">Plataformas</a></li>
-                                <li><a class="nav-link text-dark" asp-area="" asp-controller="VideoClipsPlataformas" asp-action="VideoClips/Plataformas">Conciertos</a></li>
+                                <li><a class="nav-link text-dark" asp-area="" asp-controller="VideoClipsPlataformas" asp-action="Index">VideoClips/Plataformas</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
