--- a/MvcWebMusica2/Views/VideoClips/Details.cshtml
+++ b/MvcWebMusica2/Views/VideoClips/Details.cshtml
@@ -25,6 +25,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model?.Id"><i class="fa-solid fa-pen-to-square" title="Editar"></i></a> |
     <a asp-action="Index">Back to List</a>
 </div>
