--- a/MvcWebMusica2/Views/Giras/Index.cshtml
+++ b/MvcWebMusica2/Views/Giras/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Giras</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create"><i class="border border-1 border-primary bg-info bg-opacity-25 fs-3 fa-solid fa-plus" title="Añadir"></i></a>
 </p>
 <table class="table table-bordered border-primary table-hover tabla-indice">
     <thead class="table-primary">
