--- a/MvcWebMusica2/Views/Artistas/Details.cshtml
+++ b/MvcWebMusica2/Views/Artistas/Details.cshtml
@@ -44,5 +44,5 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.Id"><i class="fa-solid fa-pen-to-square" title="Editar"></i></a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index"><i class="fa-solid fa-rotate-left" title="Volver al listado"></i></a>
 </div>
