--- a/MvcWebMusica2/Views/Canciones/Delete.cshtml
+++ b/MvcWebMusica2/Views/Canciones/Delete.cshtml
@@ -21,7 +21,7 @@
             @Html.DisplayNameFor(model => model.Duracion)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Duracion)
+            @Html.DisplayFor(model => model.Duracion, "{0:HH:mm:ss}")
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Single)
@@ -40,6 +40,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index"><i class="fa-solid fa-rotate-left" title="Volver al listado"></i></a>
     </form>
 </div>
