--- a/MvcWebMusica2/Views/Ciudades/Details.cshtml
+++ b/MvcWebMusica2/Views/Ciudades/Details.cshtml
@@ -20,11 +20,11 @@
             @Html.DisplayNameFor(model => model.Paises)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Paises.Nombre)
+            @Html.DisplayFor(model => model.Paises.Id)
         </dd>
     </dl>
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.Id"><i class="fa-solid fa-pen-to-square" title="Editar"></i></a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index"><i class="fa-solid fa-rotate-left" title="Volver al listado"></i></a>
 </div>
