--- a/MvcWebMusica2/Views/VideoClips/Create.cshtml
+++ b/MvcWebMusica2/Views/VideoClips/Create.cshtml
@@ -29,7 +29,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index"><i class="fa-solid fa-rotate-left" title="Volver al listado"></i></a>
 </div>
 
 @section Scripts {
