--- a/MvcWebMusica2/Views/VideoClipsPlataformas/Delete.cshtml
+++ b/MvcWebMusica2/Views/VideoClipsPlataformas/Delete.cshtml
@@ -34,6 +34,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index"><i class="fa-solid fa-rotate-left" title="Volver al listado"></i></a>
     </form>
 </div>
