Terminar de añadir decoradores  a los campos.

--- a/MvcWebMusica2/Views/Ciudades/Create.cshtml
+++ b/MvcWebMusica2/Views/Ciudades/Create.cshtml
@@ -22,14 +22,14 @@
                 <select asp-for="PaisesID" class ="form-control" asp-items="ViewBag.PaisesID"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary mt-3" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index"><i class="fa-solid fa-rotate-left" title="Volver al listado"></i></a>
+    <a asp-action="Index"><i class="fa-solid fa-rotate-left mt-3" title="Volver al listado"></i></a>
 </div>
 
 @section Scripts {
