--- a/MvcWebMusica2/Views/Shared/_Layout.cshtml
+++ b/MvcWebMusica2/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - MVC Web de música</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
     @* <link href="https://cdn.datatables.net/v/bs5/dt-2.0.7/cr-2.0.2/datatables.min.css" rel="stylesheet"> *@
     <link href="~/css/datatables.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
@@ -76,7 +76,7 @@
             </div>
         </nav>
     </header>
-    <div class="container bg-white bg-opacity-75 px-3">
+    <div class="container vistas px-3">
         <main role="main" class="py-3">
             @RenderBody()
         </main>
@@ -91,7 +91,8 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     @* <script src="https://cdn.datatables.net/v/bs5/dt-2.0.7/cr-2.0.2/datatables.min.js"></script> *@
     <script src="~/js/datatables.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    @* <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script> *@
+    <script src="~/js/moment.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
